# NDKFFmpeg

./: .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/ndk/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/tools/: run.c  run.h
app/src/main/java/com/example/ndk/ffmpeg/: BaseApplication.kt  MainActivity.kt
app/src/main/java/com/example/ndk/ffmpeg/logic/video/: VideoCompress.kt
app/src/main/java/com/example/ndk/ffmpeg/ui/: MainViewModel.kt
app/src/main/java/com/example/ndk/ffmpeg/util/: Extension.kt  FileUtil.kt  VideoUtil.kt
app/src/main/res/layout/: activity_main.xml  progress.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ndk/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
